mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/tipo_de_cobertura__c.object-meta.xml
<CustomObject>
    <label>Tipo de Cobertura</label>
    <nameField>
        <displayFormat>COB-{0000}</displayFormat>
        <label>ID de Registro de Cobertura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Cobertura</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>