mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/fields/clasificacion_cobertura__c.field-meta.xml
<CustomField>
    <fullName>clasificacion_cobertura__c</fullName>
    <description>Define el tipo de cobertura (Obra Social, Prepaga o Particular). Este campo es el controlador lógico para determinar los precios y los procesos de autorización en Flujos.</description>
    <inlineHelpText>Seleccione la categoría principal de la cobertura médica del paciente:

Obra Social: Entidades sindicales o estatales.

Prepaga: Entidades privadas.

Particular: Sin cobertura o pago directo.</inlineHelpText>
    <label>Tipo de Cobertura</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>obra_social</fullName>
                <color>#0B6FCE</color>
                <label>Obra Social</label>
            </value>
            <value>
                <fullName>prepaga</fullName>
                <color>#78C953</color>
                <label>Prepaga</label>
            </value>
            <value>
                <fullName>particular</fullName>
                <color>#E27001</color>
                <label>Particular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>