mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/fields/cob_text__c.field-meta.xml
<CustomField>
    <fullName>cob_text__c</fullName>
    <description>Campo busqueda de apoyo</description>
    <externalId>true</externalId>
    <label>Nombre de Cobertura</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>