mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/fields/nombre_de_la_entidad__c.field-meta.xml
<CustomField>
    <fullName>nombre_de_la_entidad__c</fullName>
    <description>Clasificación de coberturas.</description>
    <label>Nombre de Cobertura</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clasificacion_cobertura__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pami</fullName>
                <color>#0B6FCE</color>
                <label>PAMI</label>
            </value>
            <value>
                <fullName>ioma</fullName>
                <color>#0B6FCE</color>
                <label>IOMA</label>
            </value>
            <value>
                <fullName>OSECAC</fullName>
            </value>
            <value>
                <fullName>OSCHOCA</fullName>
            </value>
            <value>
                <fullName>UOM</fullName>
            </value>
            <value>
                <fullName>UNION PERSONAL</fullName>
            </value>
            <value>
                <fullName>OSPACA</fullName>
            </value>
            <value>
                <fullName>IOSFA</fullName>
            </value>
            <value>
                <fullName>OBSBA</fullName>
            </value>
            <value>
                <fullName>OSPERRYH</fullName>
            </value>
            <value>
                <fullName>SANCOR</fullName>
            </value>
            <value>
                <fullName>GALENO</fullName>
            </value>
            <value>
                <fullName>SWISS MEDICAL</fullName>
            </value>
            <value>
                <fullName>PREVENCION</fullName>
            </value>
            <value>
                <fullName>AVALIAN</fullName>
            </value>
            <value>
                <fullName>HOMINIS</fullName>
            </value>
            <value>
                <fullName>OMINT</fullName>
            </value>
            <value>
                <fullName>MEDIFE</fullName>
            </value>
            <value>
                <fullName>PREMEDIC</fullName>
            </value>
            <value>
                <fullName>DOCTORED</fullName>
            </value>
            <value>
                <fullName>ASISMED</fullName>
            </value>
            <value>
                <fullName>PAGO DIRECTO (PARTICULAR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>