mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/fields/Porcentaje_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Descuento__c</fullName>
    <label>% de Descuento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>