mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/fields/test_cobertura__c.field-meta.xml
<CustomField>
    <fullName>test_cobertura__c</fullName>
    <formula>UPPER(TEXT(nombre_de_la_entidad__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busqueda cobertura formula</label>
    <type>Text</type>
</CustomField>