mi-primer-proyecto/force-app/main/default/objects/tipo_de_cobertura__c/listViews/Lista_de_coberturas.listView-meta.xml
<ListView>
    <fullName>Lista_de_coberturas</fullName>
    <columns>NAME</columns>
    <columns>clasificacion_cobertura__c</columns>
    <columns>nombre_de_la_entidad__c</columns>
    <columns>Porcentaje_Descuento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lista de coberturas</label>
</ListView>